feat: Website rebirth - build-20260116-205817
Generated by FlexOS Engine v2
Project: rebirth_mkhcoxzd_twk2ic
Source: https://azelectricalcontractor.com

Site files: 14
Build outputs: .flexos/builds/build-20260116-205817/

GitHub Actions will deploy to Vercel automatically.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,18 @@
     "paths": {
       "@/*": [
         "src/*"
+      ],
+      "@components/*": [
+        "src/components/*"
+      ],
+      "@layouts/*": [
+        "src/layouts/*"
+      ],
+      "@styles/*": [
+        "src/styles/*"
+      ],
+      "@assets/*": [
+        "src/assets/*"
       ]
     }
   }
