--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
-  "name": "azelectricalcontractorcom-test33e",
+  "name": "astro-site",
   "type": "module",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "scripts": {
     "dev": "astro dev",
-    "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview"
   },
   "dependencies": {
-    "astro": "^4.0.0"
+    "astro": "^5.0.0",
+    "@astrojs/tailwind": "^6.0.0",
+    "@astrojs/sitemap": "^3.2.0",
+    "tailwindcss": "^3.4.0"
   },
   "devDependencies": {
-    "@astrojs/tailwind": "^5.0.0",
-    "tailwindcss": "^3.4.0"
+    "@astrojs/check": "^0.9.0",
+    "typescript": "^5.0.0"
   }
 }
